# FPGA-Companion

./: .gitignore  .gitmodules  DEBUGGING.md  README.md  SPI.md
config/: README.md  a2600.xml  amiga.xml  atari2600.xml  c64.xml  vic20.xml
src/: at_wifi.c  at_wifi.h  config.c  config.h  core.c  core.h  core_amiga.c  core_amiga.h  core_atari2600.c  core_atari2600.h  core_atarist.c  core_atarist.h  core_c64.c  core_c64.h  core_vic20.c  core_vic20.h  debug.h  hid.c  hid.h  hidparser.c  hidparser.h  inifile.c  inifile.h  main.c  mcu_hw.h  menu.c  menu.h  osd.h  osd_u8g2.c  puff.c  puff.h  sdc.c  sdc.h  spi.h  sysctrl.c  sysctrl.h  xml.c  xml.h
src/bl616/: CMakeLists.txt  Makefile  README.md  bl616_flash.ld  buildall.bat  flash.ini  flash_m0sdock_cfg.ini  flash_prog_cfg.ini  mcu_hw.c  usb_config.h
src/bl616/bl616_fpga_partner/: flash_nano20k_unfused_cfg.ini
src/esp32/: CMakeLists.txt  README.md  mcu_hw.c  sdkconfig
src/esp32/main/: CMakeLists.txt
src/rp2040/: CMakeLists.txt  FreeRTOSConfig.h  README.md  ffconf.h  freertos_callbacks.c  mcu_hw.c  tusb_config.h  ws2812.pio.h
